--- a/login-cafeOwner.html
+++ b/login-cafeOwner.html
@@ -11,7 +11,7 @@
     <div class="box-1">
         <h1>Welcome Cafesphere</h1>
         <div class="box-1-btn">
-            <label> <input type="radio" name="select"> User</label>
+           <a href="login-user.html">  <label> <input type="radio" name="select"> User</label></a>
             <label> <input type="radio" name="select"> Cafe Owner</label>
         </div>
         <input type="email" placeholder="Email :" class="email">
