updated source of images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
           <div class="container">
             <div class="logo">
-              <img src="logo.png" alt="CafeSphere Logo" />
+              <img src="images/logo.png" alt="CafeSphere Logo" />
             </div>
             <nav>
               <ul>
@@ -57,7 +57,7 @@
           <div class="content">
             <div class="image-box">
               <img
-                src="portrait-man-practicing-his-profession-celebrate-international-labour-day.jpg"
+                src="images/portrait-man-practicing-his-profession-celebrate-international-labour-day.jpg"
                 alt="Cafe Barista"
               />
               <div class="caption">
@@ -71,7 +71,7 @@
               </div>
             </div>
             <div class="image-box">
-              <img src="Page-2-img-2.jpg" alt="Celebration Event" />
+              <img src="images/Page-2-img-2.jpg" alt="Celebration Event" />
               <div class="caption">
                 <h2>Find and Book the Perfect Café for Any Occasion</h2>
                 <p>
@@ -155,18 +155,18 @@
           </ul>
         </div>
         <div class="about-image">
-          <img src="Page-4-bgimg.png" alt="CafeSphere platform on laptop" />
+          <img src="images/Page-4-bgimg.png" alt="CafeSphere platform on laptop" />
         </div>
       </div>
 
       <div class="cafe">
-        <img src="5.png" alt="CafeSphere Logo" />
+        <img src="images/5.png" alt="CafeSphere Logo" />
       </div>
 
       <section class="image-section">
-        <img src="Footer-img-1.jpg" alt="Coffee with cookie" />
-        <img src="Footer-img-2.jpg" alt="Barista making coffee" />
-        <img src="Footer-img-3.jpg" alt="Customer enjoying coffee" />
+        <img src="images/Footer-img-1.jpg" alt="Coffee with cookie" />
+        <img src="images/Footer-img-2.jpg" alt="Barista making coffee" />
+        <img src="images/Footer-img-3.jpg" alt="Customer enjoying coffee" />
       </section>
 
       <footer>
