--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="content">
             <div class="image-box">
               <img
-                src="images/portrait-man-practicing-his-profession-celebrate-international-labour-day.jpg"
+                src=" https://img.freepik.com/free-photo/portrait-man-practicing-his-profession-celebrate-international-labour-day_23-2151230086.jpg?ga=GA1.1.1351037294.1729501139 "
                 alt="Cafe Barista"
               />
               <div class="caption">
@@ -71,7 +71,7 @@
               </div>
             </div>
             <div class="image-box">
-              <img src="images/Page-2-img-2.jpg" alt="Celebration Event" />
+              <img src=" https://img.freepik.com/free-photo/women-celebrating-with-champagne-confetti_23-2147651781.jpg?t=st=1730046345~exp=1730049945~hmac=132f53db508128fa018cca7c26a6e4b6fc1cc0dddfdd44dc5a2afcf602eddd53&w=1380" alt="Celebration Event" />
               <div class="caption">
                 <h2>Find and Book the Perfect Café for Any Occasion</h2>
                 <p>
@@ -164,9 +164,9 @@
       </div>
 
       <section class="image-section">
-        <img src="images/Footer-img-1.jpg" alt="Coffee with cookie" />
-        <img src="images/Footer-img-2.jpg" alt="Barista making coffee" />
-        <img src="images/Footer-img-3.jpg" alt="Customer enjoying coffee" />
+        <img src=" https://img.freepik.com/free-photo/cup-coffee-with-heart-drawn-foam_1286-70.jpg?ga=GA1.1.1351037294.1729501139" alt="Coffee with cookie" />
+        <img src="https://img.freepik.com/free-photo/close-up-barista-making-cappuccino-bartender-preparing-coffee-drink_1150-14699.jpg?ga=GA1.1.1351037294.1729501139" alt="Barista making coffee" />
+        <img src="https://img.freepik.com/free-photo/young-woman-eating-croissants-cafe_1303-20408.jpg?t=st=1730047081~exp=1730050681~hmac=c73b88db92e0bd4208aef75ba1b823740784a40a725819c69bbf7856bef58e93&w=1060" alt="Customer enjoying coffee" />
       </section>
 
       <footer>
