--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#part1">Home</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#about-container">About Us</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
           </div>
