--- a/signup-user.html
+++ b/signup-user.html
@@ -11,7 +11,7 @@
     <div class="img-1"></div>
     <div class="img-2"></div>
     <div class="box">
-        <h1>Register Now and</h1>
+        <h1 class="upper">Register Now and</h1>
         <h1> &nbsp; &nbsp;&nbsp;Enjoy with us</h1>
         <form action="">
             <input type="text" placeholder=" Name :">
